Fix documentation container alignment (#3341)
* Fix documentation container alignment

* Let's just forget this ever happened...

* Align the hero vertically

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -9,12 +9,7 @@ header.postHeader:empty + article h1 {
 }
 
 .homeContainer .homeWrapper {
-  padding-bottom: 1em;
-}
-
-.mainContainer {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 4em 10px 1em;
 }
 
 .post article a {
